--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   "homepage": "https://github.com/yash0530/MusicApp#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.4.2",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
+    "save": "^2.3.3"
   }
 }
