--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1",
-    "save": "^2.3.3"
+    "passport-local-mongoose": "^5.0.1"
   }
 }
