--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "mongoose": "^5.4.2",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local": "^1.0.0"
   }
 }
