--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "gridfs-stream": "^1.1.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.2",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
